# tools-rock_bridge

./: .gitignore  CMakeLists.txt  README.md  create_rock_bridge  generate_lib.sh  manifest.xml
rockBridgeModule/: __init__.py  bridgeModule.py  ivData.py
rockBridgeModule/templates/: header.hpp.mako  orogen.mako  source.cpp.mako  taste.cc.mako
test/camera_simulator/: CMakeLists.txt  camera_simulator.orogen  camera_simulatorTypes.hpp  manifest.xml
test/camera_simulator/.orogen/: camera_simulator.orogen  main-orogen_default_camera_simulator__CameraDriver.cpp  orogen-project-camera_simulator.pc.in  orogen_default_camera_simulator__CameraDriver.pc.in
test/camera_simulator/tasks/: CMakeLists.txt  CameraDriver.cpp  CameraDriver.hpp
test/scripts/: SimCamera-Taste.rb
test/taste_clean/: InterfaceView.aadl
test/taste_clean/.cache/: 40a47d4ce94444195017aa8d1a046ca2_ast_v1.xml  4e4f36b464ffc71f51598771eb3680f1_ast_v1.xml  4e4f36b464ffc71f51598771eb3680f1_ast_v4.xml  53a22880d624ed37a3a39e01f149a7fa_ast_v1.xml  53a22880d624ed37a3a39e01f149a7fa_ast_v4.xml  dfbc74ba4c14969ded7d28be34e0d899_ast_v4.xml
test/taste_clean/ConcurrencyView/: camera_rock_bridge_CV_Thread.aadl  nodes  vt_pus_run_CV_Thread.aadl
test/taste_clean/camera_rock_bridge/: camera_rock_bridge.cc
test/taste_clean/pus/: pus.c  pus.h
test/test_clean/: ConcurrencyView_Properties.aadl  DataView.aadl  DeploymentView.aadl  InterfaceView.aadl  build-script.sh  system_config.h  update_data_view.sh
test/test_clean/.cache/: 40a47d4ce94444195017aa8d1a046ca2_ast_v4.xml  4ba18c56a32016a5847a46dfcf9c73b1_ast_v1.xml  (+4 more)
(+49 files in other folders)
